# LexGraph-Agent

./: .env.example  .gitignore  CLAUDE.md  RDD.md  README.md  docker-compose.yml  evaluation_results.json  pyproject.toml  test_api.py
.claude/: settings.local.json
backend/: .env.example  Dockerfile  eval_ragas.py  main.py  requirements.txt
backend/agents/: dd_agent.py  review_agent.py  state.py
backend/db/: schema.sql  supabase_client.py  task_store.py
backend/eval_data/: sample_eval.json
backend/evaluation/: __init__.py  build_eval_dataset.py  ragas_evaluator.py  test_cases.py
backend/fine_tune/: Modelfile  evaluate_finetune.py  export_gguf.py  generate_training_data.py  train_lora.py
backend/graph/: cypher_queries.py  metadata.py  neo4j_client.py  schema.py  seed.py
backend/ingestion/: chunker.py  embedder.py  graph_builder.py  ner.py  pipeline.py
backend/models/: adapter_router.py  embedding_client.py  gemini_lc.py  langchain_message_text.py  llama_client.py  llama_lc.py  model_factory.py
backend/retrieval/: __init__.py  hybrid_retriever.py
backend/tests/: test_adapter_router.py  test_chunker.py  test_model_factory.py  test_ragas_heuristic.py  test_report_formatter.py  test_self_router.py
backend/tools/: clause_segmenter.py  cross_reference_checker.py  edgar_search.py  edinet_search.py  egov_monitor.py  graph_search.py  jurisdiction_router.py  report_formatter.py  (+4 more)
frontend/: .env.local  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
training/: evaluate.py  finetune_jp.py  finetune_us.py
(+62 files in other folders)
